[package]
name = "flow"
version = "0.1.0"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.8.4"
hex = "0.4.3"
log = "0.4.14"
nannou = "0.17.1"
rand = "0.8.4"
